--- a/excalidraw-app/collab/RoomDialog.scss
+++ b/excalidraw-app/collab/RoomDialog.scss
@@ -115,14 +115,25 @@
       &__header {
         margin: 0;
       }
-
       &__linkRow {
         display: flex;
         flex-direction: row;
         align-items: flex-end;
-        gap: 0.75rem;
+        gap: 1em;
       }
-
+      &__qrcode {
+        width: 10rem;
+        height: 10rem;
+      }
+      &__action {
+        width: 65%;
+        height: 12rem;
+      }
+      &__buttons {
+        margin-top: 1rem;
+        display: flex;
+        gap: 1em;
+      }
       &__description {
         border-top: 1px solid var(--color-gray-20);
 
